2022-01-27  Yusuke Suzuki  <ysuzuki@apple.com>

        Add .clangd similar to .ccls
        https://bugs.webkit.org/show_bug.cgi?id=235743

        Reviewed by Saam Barati.

        This patch adds .clangd local configuration, which is similar to .ccls.

        * .clangd: Added.

2022-01-26  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Pass -pipe to compilers that support it
        https://bugs.webkit.org/show_bug.cgi?id=235641

        Reviewed by Darin Adler.

        * Source/cmake/WebKitCompilerFlags.cmake: Add -pipe to compiler options where supported.

2022-01-25  Myles C. Maxfield  <mmaxfield@apple.com>

        Add another test for locale-specific shaping
        https://bugs.webkit.org/show_bug.cgi?id=235558

        Reviewed by Darin Adler.

        Thanks so much to Just van Rossum for contributing the test font!!!

        * metadata/contributors.json:

2022-01-20  Elliott Williams  <emw@apple.com>

        [XCBuild] Build via the workspace with USE_WORKSPACE=YES
        https://bugs.webkit.org/show_bug.cgi?id=235385
        rdar://87489695

        Reviewed by Alexey Proskuryakov.

        Experimental XCBuild support is available by passing USE_WORKSPACE=YES to Make. This is
        roughly equivalent to opening WebKit.xcworkspace and building a scheme in the IDE.

        A workspace build is only one `xcodebuild` invocation, in contrast with the traditional
        recursive-Make build that iterates through each project directory. As a result, workspace
        builds are faster: the build system can schedule targets from different projects to build
        simultaneously, and there's lower xcodebuild overhead.

        Workspaces build _schemes_, which are a collection of targets. By default, Make looks for a
        scheme whose name matches the source directory (Source/WebCore => build scheme "WebCore").
        Makefiles can customize this by setting SCHEME.
