@@ -1,3 +1,12 @@
+2022-01-27  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Do not require GNU Gold usage to enable DEBUG_FISSION
+        https://bugs.webkit.org/show_bug.cgi?id=235737
+
+        Reviewed by Michael Catanzaro.
+
+        * Source/cmake/OptionsCommon.cmake: Allow enabling DEBUG_FISSION with any linker.
+
 2022-01-27  Yusuke Suzuki  <ysuzuki@apple.com>
 
         Add .clangd similar to .ccls
